2006-11-20  Don Allingham  <don@gramps-project.org>
	* src/Editors/_EditName.py: autocomplete for surnames
	* src/glade/gramps.glade: set focus properly

2006-11-20  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/DetDescendantReport.py: Use callname instead of nickname (#0000557)
	* src/plugins/DetAncestralReport.py: Use callname instead of nickname (#0000557)
	* src/ReportBase/_ReportUtils.py: Use callname instead of nickname (#0000557)

2006-11-20  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/RelLib/_Family.py (get_sourcref_child_list): The ChildRefs were missing
	here. This now removes deleted Sources from ChildRefs.
	* src/RelLib/_Person.py (_remove_handle_references): When removing a place dont
	delete the whole LdsOrd but only unset its place reference.
	* src/plugins/Check.py (check_place_references): Add checks for LdsOrd inside
	Person and Family

2006-11-19  Don Allingham  <don@gramps-project.org>
	* src/Utils.py: probably_alive should onlyuse primary events
	* src/DbLoader.py: try to catch a None value for default directory

2006-11-19  Brian Matherly  <brian@gramps-project.org>
	* src/ViewManager.py: Fix 0000576: Credits window behind about window

2006-11-18  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: Fix 0000543: Multimedia-Objects marked as 
		private are visible in narrative web-report

2006-11-18  Alex Roitman  <shura@gramps-project.org>
	* src/ReportBase/_StyleEditor.py (__init__): Translate string.

2006-11-18  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationshipView.py: fix messages
	* help/C/gramps.xml: improvements in text
	* various: remove unused figures

2006-11-17  Don Allingham  <don@gramps-project.org>
	* src/ManagedWindow.py: catch missing item error

2006-11-16  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: share parents button
	* src/images/share-fam.png: share parents button
	* src/gramps_main.py: share parents button
