@@ -1,3 +1,7 @@
+2006-11-21  Don Allingham  <don@gramps-project.org>
+	* src/Utils.py (probably_alive): use get_primary_event_ref_list()
+	* src/RelLib/_Person.py: Add get_primary_event_ref_list()
+
 2006-11-20  Don Allingham  <don@gramps-project.org>
 	* src/Editors/_EditName.py: autocomplete for surnames
 	* src/glade/gramps.glade: set focus properly
